fix: use overflow-wrap: anywhere
https://github.com/tailwindlabs/tailwindcss/discussions/2213

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -1,5 +1,5 @@
 .article-style {
-  @apply font-serif break-words hyphens-auto text-justify;
+  @apply font-serif break-anywhere hyphens-auto text-justify;
 
   // not `:not(td, th)` for compatibility
   * :not(td):not(th) {
